fix:perbaikan style transisi dark mode

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -39,6 +39,7 @@ html {
 
 * {
   transition:
-    background-color 0.25s color 0.25s,
-    border-color 0.25s;
+    background-color 0.25s ease,
+    color 0.25s ease,
+    border-color 0.25s ease;
 }
